@@ -6,6 +6,8 @@
 	* typeck.c (cb_emit_arithmetic): early check for valid field, reducing
 	  the number of errors in numeric checks to the first invalid part
 	  of the statement
+	* typeck.c (cb_validate_one), parser.y (check_not_88_level):
+	  msgid change for invalid references
 
 2018-07-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
